--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,13 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-.img-container{
+img{
   max-width: auto;
-  height: 100px;
-
-  
+  height: 200px;
+  float: left;
+  margin: 10px;
+  padding:1px;
+  border:5px solid #021a40;
 }
+/* body{
+  background-image: url("./images/dino.jpg");
+  background-repeat: repeat-y;
+
+} */
