adding container and rows

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ img{
   border:5px solid #021a40;
 }
 /* body{
-  background-image: url("./images/dino.jpg");
+  background-image: url("../public/images/dino.jpg");
   background-repeat: repeat-y;
 
 } */
